@@ -21,17 +21,14 @@
  */
 package processing.app.helpers;
 
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
+import org.apache.commons.compress.utils.IOUtils;
+import processing.app.legacy.PApplet;
+
+import java.io.*;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.SortedSet;
 import java.util.TreeSet;
-
-import processing.app.legacy.PApplet;
 
 @SuppressWarnings("serial")
 public class PreferencesMap extends LinkedHashMap<String, String> {
@@ -71,7 +68,13 @@ public class PreferencesMap extends LinkedHashMap<String, String> {
    * @throws IOException
    */
   public void load(File file) throws IOException {
-    load(new FileInputStream(file));
+    FileInputStream fileInputStream = null;
+    try {
+      fileInputStream = new FileInputStream(file);
+      load(fileInputStream);
+    } finally {
+      IOUtils.closeQuietly(fileInputStream);
+    }
   }
 
   protected String processPlatformSuffix(String key, String suffix, boolean isCurrentPlatform) {
@@ -222,12 +225,21 @@ public class PreferencesMap extends LinkedHashMap<String, String> {
    * @return
    */
   public PreferencesMap subTree(String parent) {
+    return subTree(parent, -1);
+  }
+
+  public PreferencesMap subTree(String parent, int sublevels) {
     PreferencesMap res = new PreferencesMap();
     parent += ".";
     int parentLen = parent.length();
     for (String key : keySet()) {
-      if (key.startsWith(parent))
-        res.put(key.substring(parentLen), get(key));
+      if (key.startsWith(parent)) {
+        String newKey = key.substring(parentLen);
+        int keySubLevels = newKey.split("\\.").length;
+        if (sublevels == -1 || keySubLevels == sublevels) {
+          res.put(newKey, get(key));
+        }
+      }
     }
     return res;
   }
@@ -302,7 +314,7 @@ public class PreferencesMap extends LinkedHashMap<String, String> {
    *         insensitive compared), <b>false</b> in any other case
    */
   public boolean getBoolean(String key) {
-    return new Boolean(get(key));
+    return Boolean.valueOf(get(key));
   }
 
   /**
@@ -317,6 +329,14 @@ public class PreferencesMap extends LinkedHashMap<String, String> {
   public boolean putBoolean(String key, boolean value) {
     String prev = put(key, value ? "true" : "false");
     return new Boolean(prev);
+  }
+
+  public String get(String key, String defaultValue) {
+    String value = get(key);
+    if (value != null) {
+      return value;
+    }
+    return defaultValue;
   }
 
 }
